Changes to css & center image

--- a/index.html
+++ b/index.html
@@ -6,44 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Era Elegance - Transform Through Time</title>
     <link rel="stylesheet" href="./styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
 
     <header>
-        <h1>Era Elegance</h1>
+        <h1 style = "font-size: 70px">Retropix</h1>
         <p>Transform Your Photos, Transcend Time!</p>
     </header>
 
     <section>
         <h2>Experience the Magic of Nostalgia</h2>
-        <p>Capture and transform your moments into captivating scenes from different eras and countries. Explore the elegance of bygone times with Era Elegance.</p>
+        <p>Capture and transform your moments into captivating scenes from different eras and countries. Explore the elegance of bygone times Retropix.</p>
         <form id="img-form">
-            <label for="photo">Upload Your Photo:</label>
+            <label for="photo" style="font-family: Mulish;">Upload Your Photo:</label>
             <input type="file" id="photo" name="photo" accept="image/*" required>
 
-            <label for="location">Enter Location:</label>
+            <label for="location" style="font-family: Mulish;">Enter Location:</label>
             <input type="text" id="location" name="location" placeholder="E.g., Paris" required>
 
-            <label for="time">Select Time Period:</label>
+            <label for="time" style="font-family: Mulish;">Select Time Period:</label>
             <select id="time" name="time" required>
+                <option value="1920s">1900s</option>
                 <option value="1920s">1920s</option>
                 <option value="1950s">1950s</option>
                 <option value="1980s">1980s</option>
-                <!-- Add more options as needed -->
+                <option value="1980s">2000s</option>
+                <option value="1980s">2010s</option>
             </select>
 
-            <button type="submit">Transform Now</button>
+            <button type="submit" style="font-family: Mulish;">Transform Now</button>
         </form>
     </section>
 
     <section>
         <h2>How It Works</h2>
         <ol>
-            <li>Upload your photo.</li>
-            <li>Enter the location you want to transform to.</li>
-            <li>Select a time period.</li>
-            <li>Click "Transform Now" to see the magic!</li>
+            <li style="font-family: Mulish;">Upload your photo.</li>
+            <li style="font-family: Mulish;">Enter the location you want to transform to.</li>
+            <li style="font-family: Mulish;">Select a time period.</li>
+            <li style="font-family: Mulish;">Click "Transform Now" to see the magic!</li>
         </ol>
     </section>
 
@@ -112,7 +124,11 @@
                 console.log(transformedUrl);
                 const img = document.createElement('img');
                 img.src = transformedUrl;
-                document.body.appendChild(img);
+                const container = document.createElement('div');
+                container.style.textAlign = 'center';
+                document.body.appendChild(container);
+                container.appendChild(img)
+            
             })
             .catch(error => {
                 // Handle errors
