--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <li style="font-family: Mulish;">Upload your photo.</li>
             <li style="font-family: Mulish;">Enter the location you want to transform to.</li>
             <li style="font-family: Mulish;">Select a time period.</li>
-            <li style="font-family: Mulish;">Click "Transform Now" to see the magic!</li>
+            <li style="font-family: Mulish;">Click "Transform Now"</li>
+            <li style="font-family: Mulish;">Wait 20-30 seconds to see the magic!</li>
         </ol>
     </section>
 
